--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "passport": "~0.3.0",
     "passport-github2": "^0.1.10",
     "passport-google-oauth20": "^1.0.0",
+    "passport-linkedin-oauth2": "^1.4.1",
     "passport-local": "^1.0.0",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.5",
